# sandbox

./: LICENSE  README.md  docs.md
html/: countries.html  exchangeRates.html  exchangeRatesGR.html
rust_countries_app/: Cargo.toml  countries.json  run.sh
rust_countries_app/src/: main.rs
rust_gui_csv_to_json/: Cargo.toml  installer.md  setup_cross_compile.sh
rust_gui_csv_to_json/src/: main.rs
