[package]
name = "rust_gui_csv_to_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.16.0" # Check for the latest version
rfd = "0.11.0" # Check for the latest version

